# internal/application/apis/dynamicdata/routes.go
@@ -7,4 +7,9 @@ func Register(r *rhttp.Router) {
 	r.Get("/base64/:value", decodeBase64Handler)
 	r.Get("/uuid", uuidGenHandler)
 	r.Get("/bytes/:n", bytesHandler)
+	r.Get("/delay/:delay", delayHandler)
+	r.Post("/delay/:delay", delayHandler)
+	r.Put("/delay/:delay", delayHandler)
+	r.Patch("/delay/:delay", delayHandler)
+	r.Delete("/delay/:delay", delayHandler)
 }
